keys as input streams